# types/types.go
@@ -1,0 +1,8 @@
+package types
+
+type User struct {
+    Username string `json:"username"`
+    Followers int   `json:"followers"`
+    Following int   `json:"following"`
+    PostCount int   `json:"postCount"`
+}
